--- a/index.html
+++ b/index.html
@@ -3,23 +3,12 @@
 <meta charset="utf-8"/>
 <head>
   <!-- Angular CDN -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-
-  <!-- JQuery CDN -->
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-
-   <!-- Materail CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-  <!-- Material JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-
-  <link rel="stylesheet" href="css/index.css">
           
 </head>
-<body ng-app="myApp">
+<body ng-app="myApp" ng-cloak">
   <div class="container">
 
     <div class="row"  ng-controller="FilterController as filterCtrl" style="height: 100%;">
@@ -32,14 +21,12 @@
           <div class="row input-action">
             <div class='col s3'>
               <div class="input-field col s12">
-              <select id="select1">
-                <option value="BANGALORE" selected>Bangalore</option>
-                <option value="MUMBAI">Mumbai</option>
-                <option value="CHENNAI">Chennai</option>
-                <option value="DELHI">Delhi</option>
-                <option value="PUNE">Pune</option>
-              </select>
-              <label>Select Branch</label>
+             <md-input-container style="margin-right: 10px;">
+              <label>City</label>
+                <md-select ng-model="currentCity" ng-change="changeInCity()">
+                  <md-option ng-repeat="city in cities" value="{{city.id}}">{{city.name}}</md-option>
+              </md-select>
+            </md-input-container>
               </div>
             </div>
 
@@ -124,12 +111,15 @@
     </div>
 
   </div>
-  <script type="text/javascript">
-    $(document).ready(function() {
-      $('select').material_select();
-    });
-    
-  </script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+
+  <!-- Angular Material Library -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
